--- a/app/src/main/res/layout/fragment_shipping_item.xml
+++ b/app/src/main/res/layout/fragment_shipping_item.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".ui.shipments.main.ShippingItemFragment">
 
+    <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/linearProgressIndicator"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="300dp"
+        android:layout_marginEnd="16dp"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/delivery_info"
         android:layout_width="wrap_content"
