--- a/app/src/main/res/values-night-v21/themes.xml
+++ b/app/src/main/res/values-night-v21/themes.xml
@@ -31,5 +31,8 @@
         <!-- specify enter and exit transitions -->
         <item name="android:windowEnterTransition">@transition/explode</item>
         <item name="android:windowExitTransition">@transition/explode</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+
     </style>
 </resources>
