--- a/driverapplication/src/main/res/layout/start_work_layout.xml
+++ b/driverapplication/src/main/res/layout/start_work_layout.xml
@@ -16,5 +16,16 @@
         android:onClick="startWork"
         android:id="@+id/start_work_btn"/>
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/stop_work_btn"
+        android:layout_width="265dp"
+        android:layout_height="58dp"
+        android:layout_marginStart="72dp"
+        android:layout_marginTop="28dp"
+        android:onClick="startWork"
+        android:text="Stop work"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
