--- a/driverapplication/src/main/res/values-night/themes.xml
+++ b/driverapplication/src/main/res/values-night/themes.xml
@@ -1,16 +1,35 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.DropEx" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/reply_blue_700</item>
-        <item name="colorPrimaryVariant">@color/reply_blue_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+    <style name="Theme.MyApp" parent="Base.Theme.MyApp">
+        <!--Material color attributes (dark theme) -->
+        <item name="colorPrimary">@color/reply_blue_200</item>
+        <item name="colorPrimaryVariant">@color/reply_blue_300</item>
+        <item name="colorSecondary">@color/reply_orange_300</item>
+        <item name="colorSecondaryVariant">@color/reply_orange_300</item>
+
+        <item name="android:colorBackground">@color/reply_black_900</item>
+        <item name="colorSurface">@color/reply_black_800</item>
+
+        <item name="colorError">@color/reply_red_200</item>
+
+        <item name="colorOnPrimary">@color/reply_black_900</item>
+        <item name="colorOnSecondary">@color/reply_black_900</item>
+        <item name="colorOnBackground">@color/reply_white_50</item>
+        <item name="colorOnSurface">@color/reply_white_50</item>
+        <item name="colorOnError">@color/reply_black_900</item>
+
+        <item name="scrimBackground">@color/reply_black_900_alpha_087</item>
+        <item name="android:statusBarColor">@color/reply_black_900_alpha_060</item>
+
+        <item name="elevationOverlayEnabled">true</item>
+
+        <!--System/Platform attributes-->
+        <item name="android:windowLightStatusBar" tools:ignore="NewApi">false</item>
+        <item name="android:windowActivityTransitions">true</item>
+
+        <!-- specify enter and exit transitions -->
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+
     </style>
 </resources>
