--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -7,7 +7,7 @@
     tools:context=".ui.profile.ProfileFragment">
 
   <ImageView
-      android:id="@+id/user_image"
+      android:id="@+id/driver_image"
       android:layout_width="100dp"
       android:layout_height="100dp"
       android:layout_marginStart="16dp"
@@ -26,7 +26,7 @@
       android:orientation="vertical"
       app:layout_constraintStart_toStartOf="parent"
 
-      app:layout_constraintTop_toBottomOf="@id/user_image">
+      app:layout_constraintTop_toBottomOf="@id/driver_image">
 
     <TextView
         android:layout_width="wrap_content"
